2007-05-30  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added the AvatarMenuItem to display avatar choices in a
	  menu
	* Banter/AvatarSelector.cs: Added comments to class
	* Banter/AvatarMenuItem.cs: New class to show Avatars in a menu item
	  for selecting
	* Banter/Makefile.am: Updated to include AvatarMenuItem

2007-05-29  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added the AvatarSelector Widget
	* Banter/AvatarSelector.cs: New Widget for selecting Avatars
	* Banter/GroupWindow.cs: Switched out Image and button for
	  AvatarSelector
	* Banter/Makefile.am: Added AvatarSelector for switching the Avatar

2007-05-29  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs, Banter/ProviderUser.cs: Added a SetAvatar call
	* Banter/GroupWindow.cs: Added a button to click on to change the
	  avatar and code to handle the changing of the avatar

2007-05-29  Brady Anderson <banderso@novell.com> 

	* Banter.mds, Banter/Application.cs, Banter/ConversationManager.cs,
	  Banter/ProviderUser.cs, Banter/Conversation.cs: Removed all code
	  and references to Tapioca

2007-05-29  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs: Added logic to disconnect the Widget event
	  when setting the state text so we don't get into a loop

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Presence.cs: Added default messages on Status
	* Banter/ContactStyle.cs: Switched out hard coded strings for status to
	  get the status from Presence

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/StatusEntry.cs: Added the ability to set Away status and Away
	  custom messages

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the revision to 0.1.5 for next iteration

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mds: Removed WebKit references
	* NEWS: Updated for 0.1.4 release

2007-05-25  Brady Anderson <banderso@novell.com> 
